--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,11 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.2",
     "angular-svg": "^2.0.8",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.3",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "mongoose": "^5.8.2",
+    "ng2-charts": "^2.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
