--- a/server/.env
+++ b/server/.env
@@ -4,6 +4,8 @@ JWT_SECRET = ToiLaAi&&DayLaDau???
 
 DATABASE_URL = mongodb://localhost:27017/store
 
+SERVER_URL = http://123.23.12.31
+
 VERIFY_EMAIL = loctran357@gmail.com
 VERIFY_PASS = WhoIam?_18
 
