--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "mongoose": "^5.8.2",
     "ng2-charts": "^2.3.0",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
