update 01/01-backend: update 1 it product"

--- a/server/.env
+++ b/server/.env
@@ -6,7 +6,7 @@ DATABASE_URL = mongodb://localhost:27017/store
 
 SERVER_URL = http://123.23.12.31
 
-VERIFY_EMAIL = loctran357@gmail.com
-VERIFY_PASS = WhoIam?_18
+MAILER_EMAIL = loctran357@gmail.com
+MAILER_PASS = WhoIam?_18
 
 IMGBB_API_KEY = 8fee8d45f511c5aed3140df1a8e98f74
